@@ -33,24 +33,12 @@
   <string name="pref_title_starting_time_2">Temps de jeu (Deuxième joueur)</string>
   <string name="pref_title_starting_time_units">Unités du temps de jeu</string>
   <string name="pref_title_different_starting_time">Temps de jeu différent</string>
-  <string-array name="delay_types">
-    <item>Aucun</item>
-    <item>Fischer</item>
-    <item>Bronstein</item>
-  </string-array>
-  <string-array name="delay_vals" translatable="false">
-    <item>None</item>
-    <item>Fischer</item>
-    <item>Bronstein</item>
-  </string-array>
+  <string name="delay_none">Aucun</string>
+  <string name="delay_fischer">Fischer</string>
+  <string name="delay_bronstein">Bronstein</string>
   <string-array name="time_units">
     <item>Secondes</item>
     <item>Minutes</item>
     <item>Heures</item>
-  </string-array>
-  <string-array name="time_unit_vals" translatable="false">
-    <item>Seconds</item>
-    <item>Minutes</item>
-    <item>Hours</item>
   </string-array>
 </resources>
