@@ -33,11 +33,10 @@
   <string name="pref_title_starting_time_2">Spilletid (spiller 2)</string>
   <string name="pref_title_starting_time_units">Tidsenhet for spilletid</string>
   <string name="pref_title_different_starting_time">Ulik spilletid</string>
-  <string-array name="delay_types">
-    <item>Ingen</item>
-    <item>Fischer</item>
-    <item>Bronstein</item>
-  </string-array>
+  <string name="delay_none">Ingen</string>
+  <string name="delay_fischer">Fischer</string>
+  <string name="delay_capped_fischer">Begrenset Fischer</string>
+  <string name="delay_bronstein">Bronstein</string>
   <string-array name="time_units">
     <item>Sekunder</item>
     <item>Minutter</item>
