@@ -33,11 +33,9 @@
   <string name="pref_title_starting_time_2">Oyun Süresi (2. Oyuncu)</string>
   <string name="pref_title_starting_time_units">Oyun Süresi Zaman Birimi</string>
   <string name="pref_title_different_starting_time">Farklı Oyun Süreleri</string>
-  <string-array name="delay_types">
-    <item>Yok</item>
-    <item>Fischer</item>
-    <item>Bronstein</item>
-  </string-array>
+  <string name="delay_none">Yok</string>
+  <string name="delay_fischer">Fischer</string>
+  <string name="delay_bronstein">Bronstein</string>
   <string-array name="time_units">
     <item>Saniye</item>
     <item>Dakika</item>
